Fixed layout of account details when the details container is too narrow.

--- a/client-src/AccountView/AccountDetails.module.scss
+++ b/client-src/AccountView/AccountDetails.module.scss
@@ -35,6 +35,9 @@
   grid-template-rows: minmax(0, 1fr);
   height: 100%;
   width: 100%;
+
+  container-name: account-details;
+  container-type: inline-size;
 }
 
 .placeholder {
