--- a/client-src/_breakpoints.scss
+++ b/client-src/_breakpoints.scss
@@ -1,3 +1,5 @@
 $side-by-side: 600px;
 
 $detail-view-min-width: 650px;
+
+$account-detail-min-width: 725px;
